--- a/profil.html
+++ b/profil.html
@@ -6,9 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Selamat Datang</h1>
-    <h2>di markas coding</h2>
-    <h3>smkn 1 blega</h3>
-    <h1>ini halaman</h1>
+    <h1>ini profil</h1>
   </body>
 </html>
